{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 57,
  "lineage": "7baf6caa-48bb-7d0a-0f9c-d38287c273f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381491967947:security-group/sg-01b2d5d46f54d9db9",
            "description": "Enable MYSQL access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b2d5d46f54d9db9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f948eb14809a9586"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database server Security Group",
            "name_prefix": "",
            "owner_id": "381491967947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security group"
            },
            "tags_all": {
              "Name": "Database Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0755aab5264492a19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_security_group.webserver-security-group",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381491967947:security-group/sg-073af53b511cc4803",
            "description": "Enable ssh access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073af53b511cc4803",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b2d5d46f54d9db9"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "381491967947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh Security group"
            },
            "tags_all": {
              "Name": "ssh Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0755aab5264492a19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381491967947:security-group/sg-0f948eb14809a9586",
            "description": "Enable http/https access on port 80/443 via ALB and ssh via ssh sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f948eb14809a9586",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073af53b511cc4803"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web server Security Group",
            "name_prefix": "",
            "owner_id": "381491967947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web server Security group"
            },
            "tags_all": {
              "Name": "Web server Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0755aab5264492a19"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_vpc.vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:381491967947:vpc/vpc-0755aab5264492a19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041df38d0d094535b",
            "default_route_table_id": "rtb-0427f4d83a303b66d",
            "default_security_group_id": "sg-0c9b04132c97eb677",
            "dhcp_options_id": "dopt-0cba365c05bff8f62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0755aab5264492a19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0427f4d83a303b66d",
            "owner_id": "381491967947",
            "tags": {
              "Name": "central-network"
            },
            "tags_all": {
              "Name": "central-network"
            }
          }
        }
      ]
    }
  ]
}